Add container_name to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       SPLUNK_PASSWORD: password
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
+    container_name: sh-master
   sh-01:
     ports:
       - "8001:8001"
@@ -14,20 +15,23 @@ services:
       SPLUNK_PASSWORD: password
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
+    container_name: sh-01
   sh-02:
     ports:
       - "8002:8002"
     environment:
       SPLUNK_PASSWORD: password
       SPLUNK_START_ARGS: --accept-license
-    image: "splunk/splunk"     
+    image: "splunk/splunk"
+    container_name: sh-02
   indx-master:
     ports:
       - "8003:8003"
     environment:
       SPLUNK_PASSWORD: password
       SPLUNK_START_ARGS: --accept-license
-    image: "splunk/splunk"  
+    image: "splunk/splunk"
+    container_name: indx-master
   idx-01:
     ports:
       - "8004:8004"
@@ -35,17 +39,20 @@ services:
       SPLUNK_PASSWORD: password
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
+    container_name: idx-01
   idx-02:
     ports:
       - "8005:8005"
     environment:
       SPLUNK_PASSWORD: password
       SPLUNK_START_ARGS: --accept-license
-    image: "splunk/splunk"   
+    image: "splunk/splunk"
+    container_name: idx-02
   deployer:
     ports:
       - "8006:8006"
     environment:
       SPLUNK_PASSWORD: password
       SPLUNK_START_ARGS: --accept-license
-    image: "splunk/splunk"   
+    image: "splunk/splunk"
+    container_name: deployer
