--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: sh-master
+    host_name: sh-master
   sh-01:
     ports:
       - "8001:8000"
@@ -16,6 +17,7 @@ services:
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: sh-01
+    host_name: sh-01
   sh-02:
     ports:
       - "8002:8000"
@@ -24,6 +26,7 @@ services:
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: sh-02
+    host_name: sh-02
   indx-master:
     ports:
       - "8003:8000"
@@ -32,6 +35,7 @@ services:
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: indx-master
+    host_name: indx-master
   idx-01:
     ports:
       - "8004:8000"
@@ -40,6 +44,7 @@ services:
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: idx-01
+    host_name: idx-01
   idx-02:
     ports:
       - "8005:8000"
@@ -48,6 +53,7 @@ services:
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: idx-02
+    host_name: idx-02
   deployer:
     ports:
       - "8006:8000"
@@ -56,3 +62,4 @@ services:
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: deployer
+    host_name: deployer
