--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      SPLUNK_PASSWORD: 1234
+      SPLUNK_PASSWORD: asdfjklö
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: sh-master
@@ -13,7 +13,7 @@ services:
     ports:
       - "8001:8000"
     environment:
-      SPLUNK_PASSWORD: 1234
+      SPLUNK_PASSWORD: asdfjklö
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: sh-01
@@ -22,7 +22,7 @@ services:
     ports:
       - "8002:8000"
     environment:
-      SPLUNK_PASSWORD: 1234
+      SPLUNK_PASSWORD: asdfjklö
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: sh-02
@@ -31,7 +31,7 @@ services:
     ports:
       - "8003:8000"
     environment:
-      SPLUNK_PASSWORD: 1234
+      SPLUNK_PASSWORD: asdfjklö
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: indx-master
@@ -40,7 +40,7 @@ services:
     ports:
       - "8004:8000"
     environment:
-      SPLUNK_PASSWORD: 1234
+      SPLUNK_PASSWORD: asdfjklö
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: idx-01
@@ -49,7 +49,7 @@ services:
     ports:
       - "8005:8000"
     environment:
-      SPLUNK_PASSWORD: 1234
+      SPLUNK_PASSWORD: asdfjklö
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: idx-02
@@ -58,7 +58,7 @@ services:
     ports:
       - "8006:8000"
     environment:
-      SPLUNK_PASSWORD: 1234
+      SPLUNK_PASSWORD: asdfjklö
       SPLUNK_START_ARGS: --accept-license
     image: "splunk/splunk"
     container_name: deployer
