--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     image: "splunk/splunk"
     container_name: sh-master
     hostname: sh-master
+    networks:
+      learning_splunk:
+        ipv4_address: 172.28.1.1
   sh-01:
     ports:
       - "8001:8000"
@@ -18,6 +21,9 @@ services:
     image: "splunk/splunk"
     container_name: sh-01
     hostname: sh-01
+    networks:
+      learning_splunk:
+        ipv4_address: 172.28.1.2
   sh-02:
     ports:
       - "8002:8000"
@@ -27,6 +33,9 @@ services:
     image: "splunk/splunk"
     container_name: sh-02
     hostname: sh-02
+    networks:
+      learning_splunk:
+        ipv4_address: 172.28.1.3
   indx-master:
     ports:
       - "8003:8000"
@@ -36,6 +45,9 @@ services:
     image: "splunk/splunk"
     container_name: indx-master
     hostname: indx-master
+    networks:
+      learning_splunk:
+        ipv4_address: 172.28.1.4
   idx-01:
     ports:
       - "8004:8000"
@@ -45,6 +57,9 @@ services:
     image: "splunk/splunk"
     container_name: idx-01
     hostname: idx-01
+    networks:
+      learning_splunk:
+        ipv4_address: 172.28.1.5
   idx-02:
     ports:
       - "8005:8000"
@@ -54,6 +69,9 @@ services:
     image: "splunk/splunk"
     container_name: idx-02
     hostname: idx-02
+    networks:
+      learning_splunk:
+        ipv4_address: 172.28.1.6
   deployer:
     ports:
       - "8006:8000"
@@ -63,3 +81,12 @@ services:
     image: "splunk/splunk"
     container_name: deployer
     hostname: deployer
+    networks:
+      learning_splunk:
+        ipv4_address: 172.28.1.7
+networks:
+  learning_splunk:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.28.0.0/16
